--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h3 class="btn btn-primary">As soon as the popup appears, please click Allow. After you've spoken a command</h3><br>
 <h2 class="btn btn-warning">Click Start And Say "Selfi"</h2><br>
 <button class="btn btn-Success" onclick="save()">Start</button>
-<div id="Camera" class="d">Your Web Cam will appear HERE</div>
+<div id="Cam" class="d">Your Web Cam will appear HERE</div>
 
 </center>
 </div>
